infty is deprecated

--- a/rnaseq_normalizations.ipynb
+++ b/rnaseq_normalizations.ipynb
@@ -901,7 +901,7 @@
     }
    ],
    "source": [
-    "avg = np.log(counts).mean(axis=1).replace(-1*np.infty, None).dropna()\n",
+    "avg = np.log(counts).mean(axis=1).replace(-1*np.inf, None).dropna()\n",
     "avg"
    ]
   },
