updated to more sensitive np.log

--- a/rnaseq_normalizations.ipynb
+++ b/rnaseq_normalizations.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "id": "c26ca8a3",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "Gene3         33         55        200"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,6 +738,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "ced04539-2e6c-4379-a7d9-dca0a2eaabbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sample #1</th>\n",
+       "      <th>Sample #2</th>\n",
+       "      <th>Sample #3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gene</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Gene1</th>\n",
+       "      <td>-inf</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gene2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gene3</th>\n",
+       "      <td>33.0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sample #1  Sample #2  Sample #3\n",
+       "gene                                  \n",
+       "Gene1       -inf         10          4\n",
+       "Gene2        2.0          6         12\n",
+       "Gene3       33.0         55        200"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert 0 counts to -np.inf to avoid errors later on\n",
+    "counts = counts.replace(0, -1 * np.inf)\n",
+    "counts"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d368cdf6",
    "metadata": {},
@@ -747,18 +827,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
+   "id": "68bbc50f-0198-45bf-8eb7-3e5a073d60d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note that we need a special log function here that avoid taking log of 0 or -inf!\n",
+    "def log(matrix):\n",
+    "    return matrix.applymap(lambda x: np.log(x) if x != -1 * np.inf else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "id": "e0c5a1e6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -822,13 +906,13 @@
        "Gene3   3.496508   4.007333   5.298317"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log(counts)"
+    "log(counts)"
    ]
   },
   {
@@ -841,18 +925,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 106,
    "id": "16dcbe91",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -863,13 +939,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log(counts).mean(axis=1)"
+    "log(counts).mean(axis=1)"
    ]
   },
   {
@@ -882,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "id": "1cb91112",
    "metadata": {},
    "outputs": [
@@ -892,16 +968,16 @@
        "gene\n",
        "Gene2    1.656604\n",
        "Gene3    4.267386\n",
-       "dtype: object"
+       "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "avg = np.log(counts).mean(axis=1).replace(-1*np.inf, None).dropna()\n",
+    "avg = log(counts).mean(axis=1).replace(-1*np.inf, np.nan).dropna()\n",
     "avg"
    ]
   },
@@ -915,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "id": "35e10944",
    "metadata": {},
    "outputs": [
@@ -975,20 +1051,20 @@
        "</div>"
       ],
       "text/plain": [
-       "      Sample #1 Sample #2 Sample #3\n",
-       "gene                               \n",
-       "Gene1       NaN       NaN       NaN\n",
-       "Gene2 -0.963457  0.135155  0.828302\n",
-       "Gene3 -0.770878 -0.260053  1.030931"
+       "       Sample #1  Sample #2  Sample #3\n",
+       "gene                                  \n",
+       "Gene1        NaN        NaN        NaN\n",
+       "Gene2  -0.963457   0.135155   0.828302\n",
+       "Gene3  -0.770878  -0.260053   1.030931"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(np.log(counts).T - avg).T"
+    "(log(counts).T - avg).T.replace(-1*np.inf, np.nan)"
    ]
   },
   {
@@ -1001,18 +1077,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "id": "d7b387a0",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1022,13 +1090,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((np.log(counts).T - avg).T).mean()"
+    "((log(counts).T - avg).T).mean()"
    ]
   },
   {
@@ -1041,18 +1109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "id": "9fe81382",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1062,13 +1122,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.exp(((np.log(counts).T - avg).T).mean())"
+    "np.exp(((log(counts).T - avg).T).mean())"
    ]
   },
   {
@@ -1081,18 +1141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 111,
    "id": "5c1e86cd",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1128,7 +1180,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Gene1</th>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>-inf</td>\n",
        "      <td>10.644401</td>\n",
        "      <td>1.578820</td>\n",
        "    </tr>\n",
@@ -1151,18 +1203,18 @@
       "text/plain": [
        "       Sample #1  Sample #2  Sample #3\n",
        "gene                                  \n",
-       "Gene1   0.000000  10.644401   1.578820\n",
+       "Gene1       -inf  10.644401   1.578820\n",
        "Gene2   4.760321   6.386640   4.736459\n",
        "Gene3  78.545292  58.544204  78.940989"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "counts / np.exp(((np.log(counts).T - avg).T).mean())"
+    "counts / np.exp(((log(counts).T - avg).T).mean())"
    ]
   },
   {
@@ -1175,18 +1227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 112,
    "id": "89b436e1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homes/sjanssen/miniconda3/envs/notebookServer/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log\n",
-      "  result = func(self.values, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1222,7 +1266,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Gene1</th>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-inf</td>\n",
        "      <td>11.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
@@ -1245,19 +1289,27 @@
       "text/plain": [
        "       Sample #1  Sample #2  Sample #3\n",
        "gene                                  \n",
-       "Gene1        0.0       11.0        2.0\n",
+       "Gene1       -inf       11.0        2.0\n",
        "Gene2        5.0        6.0        5.0\n",
        "Gene3       79.0       59.0       79.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "round(counts / np.exp(((np.log(counts).T - avg).T).mean()))"
+    "round(counts / np.exp(((log(counts).T - avg).T).mean()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a8a5b25-0542-41e1-a344-a5db02134d81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
